--- a/hardhat-js/package.json
+++ b/hardhat-js/package.json
@@ -6,10 +6,12 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "1.0.11",
     "ethers": "^6.11.1",
     "hardhat": "^2.19.3"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@openzeppelin/contracts": "^5.0.2"
   }
 }
